--- a/oscarTV/oscarTV/MovieTableViewCell.xib
+++ b/oscarTV/oscarTV/MovieTableViewCell.xib
@@ -7,33 +7,25 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="165" id="yIv-ZV-mAy" customClass="MovieTableViewCell" customModule="oscarTV" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="219" id="yIv-ZV-mAy" customClass="MovieTableViewCell" customModule="oscarTV" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="174"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yIv-ZV-mAy" id="lWz-1U-UDg">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="119.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="173.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="751" verticalCompressionResistancePriority="752" translatesAutoresizingMaskIntoConstraints="NO" id="U11-bD-YEi">
-                        <rect key="frame" x="8" y="8" width="100" height="104"/>
-                        <animations/>
-                        <color key="backgroundColor" red="0.13213659159999999" green="1" blue="0.1071995449" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="100" id="phg-yW-L8Z"/>
-                        </constraints>
-                    </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="nxq-Ia-xHl">
-                        <rect key="frame" x="116" y="8" width="196" height="104"/>
+                        <rect key="frame" x="116" y="8" width="196" height="249.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7G-1X-b1Q">
-                                <rect key="frame" x="0.0" y="0.0" width="83" height="20"/>
+                                <rect key="frame" x="0.0" y="0.0" width="83" height="19.5"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E2a-o0-gyU">
-                                <rect key="frame" x="0.0" y="20" width="196" height="85"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E2a-o0-gyU">
+                                <rect key="frame" x="0.0" y="19.5" width="187.5" height="230"/>
                                 <animations/>
                                 <string key="text">Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis Movie Synopsis </string>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
@@ -43,6 +35,15 @@
                         </subviews>
                         <animations/>
                     </stackView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="751" verticalCompressionResistancePriority="752" translatesAutoresizingMaskIntoConstraints="NO" id="U11-bD-YEi">
+                        <rect key="frame" x="8" y="107" width="100" height="150.5"/>
+                        <animations/>
+                        <color key="backgroundColor" red="0.13213659159999999" green="1" blue="0.1071995449" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="phg-yW-L8Z"/>
+                            <constraint firstAttribute="height" constant="150" id="tXk-VJ-xKK"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <animations/>
                 <constraints>
@@ -61,7 +62,7 @@
                 <outlet property="moviePosterImageView" destination="U11-bD-YEi" id="nUW-tO-Odz"/>
                 <outlet property="movieTitleLabel" destination="c7G-1X-b1Q" id="UZT-Bs-u7f"/>
             </connections>
-            <point key="canvasLocation" x="344" y="312"/>
+            <point key="canvasLocation" x="344" y="339"/>
         </tableViewCell>
     </objects>
 </document>
