--- a/oscarTV/oscarTV_tvOS/MovieTableViewCell.xib
+++ b/oscarTV/oscarTV_tvOS/MovieTableViewCell.xib
@@ -7,34 +7,90 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="300" id="qft-4v-OWp" customClass="MovieTableViewCell" customModule="oscarTV_tvOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="1920" height="315"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="320" id="qft-4v-OWp" customClass="MovieTableViewCell" customModule="oscarTV_tvOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="1920" height="322"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qft-4v-OWp" id="9K9-6e-oj9">
-                <rect key="frame" x="0.0" y="0.0" width="1920" height="315"/>
+                <rect key="frame" x="0.0" y="0.0" width="1920" height="322"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ufv-dt-unt">
-                        <rect key="frame" x="8" y="8" width="200" height="299"/>
+                        <rect key="frame" x="8" y="16" width="200" height="298.5"/>
                         <animations/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="299" id="7Yp-XN-wmM"/>
-                            <constraint firstAttribute="width" constant="200" id="GTS-23-ZIZ"/>
+                            <constraint firstAttribute="height" constant="298" id="8Xg-r9-TKB"/>
+                            <constraint firstAttribute="width" constant="200" id="AY4-nw-fJD"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="753" text="Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3g0-RU-Ls8">
+                        <rect key="frame" x="224" y="8" width="277" height="68.5"/>
+                        <animations/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" misplaced="YES" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aym-Hi-oD2">
+                        <rect key="frame" x="224" y="76" width="1388" height="238"/>
+                        <animations/>
+                        <mutableString key="text">Praesent tristique, ante sed luctus aliquet, dolor velit faucibus ligula, a maximus enim velit quis diam. Quisque maximus sed magna sed imperdiet. Nullam varius ut arcu sed porttitor. Praesent efficitur, lectus nec euismod consequat, nisi ipsum varius est, in volutpat neque erat id tellus. Quisque ornare ipsum odio, nec semper erat placerat egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras eget dictum erat. Duis consequat quis dolor id dignissim. Nullam vitae eros mi. Integer rhoncus mauris nisl, eu tristique est tempus nec. Integer rutrum libero non mauris porttitor feugiat. Sed feugiat, lectus vitae rhoncus tincidunt, ex nisi dictum quam, ut elementum metus augue eget erat. Aenean at lectus lobortis, faucibus libero nec, ornare nisl. Maecenas condimentum lectus nec dapibus pharetra. Etiam nulla orci, eleifend vel massa congue, posuere dapibus elit.</mutableString>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kQ5-0D-Kb5">
+                        <rect key="frame" x="1612" y="8" width="300" height="306"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="254" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="5J9-4v-zuK">
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="306"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="254" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yYw-WR-Efk">
+                                        <rect key="frame" x="0.0" y="0.0" width="59" height="306"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="1988" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7dc-F6-w2W">
+                                        <rect key="frame" x="65" y="0.0" width="235" height="306"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <animations/>
+                            </stackView>
+                        </subviews>
+                        <animations/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="CDD-5T-Zb9"/>
+                        </constraints>
+                    </stackView>
                 </subviews>
                 <animations/>
                 <constraints>
+                    <constraint firstItem="3g0-RU-Ls8" firstAttribute="top" secondItem="9K9-6e-oj9" secondAttribute="topMargin" id="2aa-NC-YdR"/>
+                    <constraint firstItem="3g0-RU-Ls8" firstAttribute="leading" secondItem="aym-Hi-oD2" secondAttribute="leading" id="E5p-nl-HGj"/>
                     <constraint firstAttribute="bottomMargin" secondItem="Ufv-dt-unt" secondAttribute="bottom" id="F0d-nU-dhK"/>
-                    <constraint firstItem="Ufv-dt-unt" firstAttribute="top" secondItem="9K9-6e-oj9" secondAttribute="topMargin" id="PVe-s4-7LO"/>
+                    <constraint firstAttribute="topMargin" secondItem="kQ5-0D-Kb5" secondAttribute="top" id="KI9-Gj-HzK"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="kQ5-0D-Kb5" secondAttribute="trailing" id="KYR-ff-hBq"/>
+                    <constraint firstItem="Ufv-dt-unt" firstAttribute="top" secondItem="9K9-6e-oj9" secondAttribute="topMargin" constant="8" id="PVe-s4-7LO"/>
+                    <constraint firstItem="aym-Hi-oD2" firstAttribute="leading" secondItem="Ufv-dt-unt" secondAttribute="trailing" constant="16" id="RGX-Km-inX"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="aym-Hi-oD2" secondAttribute="bottom" id="ScM-nK-FjP"/>
                     <constraint firstItem="Ufv-dt-unt" firstAttribute="leading" secondItem="9K9-6e-oj9" secondAttribute="leadingMargin" id="Tgj-Hf-Q2j"/>
+                    <constraint firstItem="aym-Hi-oD2" firstAttribute="top" secondItem="3g0-RU-Ls8" secondAttribute="bottom" id="dt4-jq-Mey"/>
+                    <constraint firstItem="kQ5-0D-Kb5" firstAttribute="leading" secondItem="aym-Hi-oD2" secondAttribute="trailing" id="hts-wY-ulb"/>
+                    <constraint firstItem="3g0-RU-Ls8" firstAttribute="width" relation="lessThanOrEqual" secondItem="aym-Hi-oD2" secondAttribute="width" id="qZI-Yw-owj"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="kQ5-0D-Kb5" secondAttribute="bottom" id="qjD-mS-bDB"/>
                 </constraints>
             </tableViewCellContentView>
             <animations/>
             <connections>
+                <outlet property="movieDescriptionLabel" destination="aym-Hi-oD2" id="FH5-fc-hYs"/>
                 <outlet property="moviePosterImageView" destination="Ufv-dt-unt" id="ro0-mU-vtX"/>
+                <outlet property="movieTitleLabel" destination="3g0-RU-Ls8" id="8Zf-V5-yd0"/>
             </connections>
-            <point key="canvasLocation" x="462" y="501.5"/>
+            <point key="canvasLocation" x="462" y="482"/>
         </tableViewCell>
     </objects>
 </document>
